--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 x-spark-common: &spark-common
-    image: bitnami/spark:3.3.3
+    image: bitnami/spark:latest
     volumes:
       - ./jobs:/opt/bitnami/spark/jobs
     command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
@@ -96,6 +96,7 @@ services:
 
   spark-master:
     image: bitnami/spark:latest
+    container_name: spark-master
     volumes:
       - ./jobs:/opt/bitnami/spark/jobs
     command: bin/spark-class org.apache.spark.deploy.master.Master
